# political-news

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  ai_summary.py  config.py  database.py  fetch_news.py  html_render.py  main.py  models.py  news_data.py  schemas.py  sync_service.py  tasks.py
app/routers/: news_api.py  sync_routes.py  web.py
scripts/: init-db.sql  install-systemd.sh  server-bootstrap.sh
scripts/systemd/: political-news.service
ssl/: README.md
tests/: conftest.py  test_ai_summary.py  test_fetch_news.py  test_main.py  test_models.py  test_tasks.py
